--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
     </section>
     <section id="results">
-      <button type="button" id="btn-historial">Historial</button>
+      <button type="button" id="btn-historial">Cientifica</button>
       <h2 id="current-calculation">0</h2>
       <h2>Result: <span id="current-result">0</span></h2>
     </section>
